Fix: give top settings gear a hover over effect
on Catalina the cursor: pointer is not showing correctly, so I am adding a 1px border to the gear icon at the bottom at hover to give the user a visual indication that something is functional here

--- a/Open Access Helper Safari/css/popup.css
+++ b/Open Access Helper Safari/css/popup.css
@@ -194,6 +194,14 @@ label{
     font-style: italic;
 }
 
+#configurationlinktop > img {
+    padding: 2px;
+    border-bottom: 1px solid #ffffff;
+}
+#configurationlinktop > img:hover{
+    border-bottom: 1px solid #F09819;
+}
+
 #sadbabyimg{
     width: 33%;
     display: block;
